crates/aranya-policy-lang/tests/data/command_without_open_block.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 6 column 5:  --> 6:5
  |
6 |     policy {
  |     ^---
  |
  = expected open_block
